--- a/client frontend/public/index.html
+++ b/client frontend/public/index.html
@@ -29,7 +29,7 @@
     />
     <link rel="apple-touch-icon" href="./user.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Thuy Tien - MyBook Store</title>
+    <title>THCS Phú Diễn</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
